more gitignore items

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # IDE and editor specific files
 .idea/
+**/.idea
 .vscode/
+**/.vscode
 *.swp
 *.swo
 *.iml
@@ -14,6 +16,7 @@
 # content below from: https://github.com/github/gitignore/blob/master/Global/macOS.gitignore
 # General
 .DS_Store
+**/.DS_Store
 .AppleDouble
 .LSOverride
 
