--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@
 
 version: '3.8'
 services:
-
+  # our app services below:
   dapr-placement:
     image: "daprio/dapr"
     command: ["./placement", "--port", "50006"]
@@ -15,6 +15,39 @@ services:
       - "50006:50006"
     networks:
       - dapr-network
+  go-api-svc-dapr:
+    build:
+      context: ./services/go-api-svc-dapr
+      dockerfile: Dockerfile
+    image: go-api-svc-dapr
+    ports:
+      - "5003:5003"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl --fail http://localhost:5001/api/health || exit 1" ]
+      interval: 15s
+      timeout: 5s
+      start_period: 10s #adjust as neccesary. 
+      retries: 5
+    networks:
+      - dapr-network
+    depends_on:
+      - dapr-placement
+
+  go-api-svc-dapr-sidecar:
+    image: "daprio/daprd:edge"
+    command: [
+      "./daprd",
+      "--app-id", "go-api-svc-dapr",
+      "--app-port", "5003",
+      "--dapr-grpc-port", "50001",
+      "--placement-host-address", "placement:50006", # Dapr's placement service can be reach via the docker DNS entry
+      "--resources-path", "./components"
+    ]
+    volumes:
+      - "./dapr/localdev/:/components" # Mount our components folder for the runtime to use. The mounted location must match the --resources-path argument.
+    depends_on:
+      - go-api-svc-dapr
+    network_mode: "service:go-api-svc-dapr" # Attach the gosvc service to the gosvc network namespace
 
 networks:
   dapr-network:
