--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@
 
 version: '3.8'
 services:
-
+# our miscellaneous items:
   dapr-placement:
     image: "daprio/dapr"
     command: ["./placement", "--port", "50006"]
@@ -15,6 +15,8 @@ services:
       - "50006:50006"
     networks:
       - dapr-network
+
+# our app services below:
 
 networks:
   dapr-network:
