added a demonstration of publishing a message to a dapr pubsub during the healthcheck handling

--- a/miscellaneous/dapr/componentdefinitions/localdev/pubsub.yaml
+++ b/miscellaneous/dapr/componentdefinitions/localdev/pubsub.yaml
@@ -1,5 +1,5 @@
 # probably the most simple Component. https://docs.dapr.io/reference/components-reference/supported-pubsub/setup-inmemory/
-apiVersion: dapr.io/v1
+apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
   name: pubsub
