--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,28 @@ $RECYCLE.BIN/
 
 # database data directory
 **/database-data/*
+
+
+# svelte
+
+**/node_modules
+
+# Output
+**/.output
+**/.vercel
+**/.svelte-kit
+**/build
+
+# OS
+**/.DS_Store
+**/Thumbs.db
+
+# Env
+**/.env
+**/.env.*
+!**/.env.example
+!**/.env.test
+
+# Vite
+**/vite.config.js.timestamp-*
+**/vite.config.ts.timestamp-*
