--- a/services/nodejs-api-svc-svelte/package.json
+++ b/services/nodejs-api-svc-svelte/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "nodejs-api-svc-svelte",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"description": "This is a simple Node.js web app and API service using SvelteKit.",
 	"author": "@github.com/chuckamus-prime",
-  	"license": "MIT",
+	"license": "MIT",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
+		"start": "vite run",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -14,7 +15,7 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
