--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,25 @@
 #        docker-compose build
 
 version: '3.8'
+services:
+# our miscellaneous items:
+
+  pgadmin: # pgadmin database gui service
+    image: elestio/pgadmin:REL-8_10
+    environment:
+        PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+        PGADMIN_DEFAULT_PASSWORD: password
+        PGADMIN_LISTEN_PORT: 80
+    ports:
+        - 5009:80
+    volumes:
+        - pgadmin:/var/lib/pgadmin
+
+
+
+# our app services below:
+
+
+
+volumes:
+  pgadmin:
